<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NameInput">

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="serif-monospace"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/intro" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:fontFamily="serif-monospace"
        android:textSize="25dp"
        android:text="" />

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Name"
        android:layout_below="@id/tv_intro"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:background="@drawable/btn_design"
        />

    <Button
        android:id="@+id/btn_name_input_to_appcor"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:background="@drawable/arrowright"
        android:layout_below="@id/et_player_name"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:layout_marginLeft="250dp"
        app:backgroundTint="@null"
        android:text="@string/start" />

    <Button
        android:id="@+id/btn_name_input_to_main"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_below="@id/et_player_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrowleft"
        app:backgroundTint="@null"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:layout_marginRight="250dp"
        android:text="@string/back" />
</RelativeLayout>