<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sharat_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sharatdoor"
    tools:context=".SharatClass">


    <RatingBar
        android:id="@+id/rb_sharat_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:numStars="5"
        android:progressTint="#20B0F0"
        android:background="@drawable/metalback"
        />


    <SeekBar
        android:id="@+id/sb_sharat_class"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:splitTrack="false"
        android:layout_below="@id/rb_sharat_class"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="60dp"
        android:thumb="@drawable/sb_thumb"
        android:progressDrawable="@drawable/sb_design"
        />


    <Button
        android:id="@+id/btn_time"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:textSize="20sp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/clock"
        android:layout_below="@+id/sb_sharat_class"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btn_lock_to_open_door"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:background="@drawable/lock"
        android:layout_below="@id/btn_time"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        app:backgroundTint="@null"
        />

    <Switch
        android:id="@+id/sw1"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/YO"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:theme="@style/switches"
        android:layout_below="@+id/sb_sharat_class" />

    <Switch
        android:id="@+id/sw2"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/FA"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw1" />

    <Switch
        android:id="@+id/sw3"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/YO"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw2" />

    <Switch
        android:id="@+id/sw4"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/GA"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw3" />

    <Switch
        android:id="@+id/sw5"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/RO"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw4" />

    <Switch
        android:id="@+id/sw6"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/FA"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw5" />

    <Switch
        android:id="@+id/sw7"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/GA"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw6" />

    <Switch
        android:id="@+id/sw8"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/metalback"
        android:textSize="20dp"
        android:text="@string/GA"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:theme="@style/switches"
        android:layout_below="@+id/sw7" />

    <Spinner
        android:id="@+id/spn_teachers"
        android:layout_below="@+id/btn_lock_to_open_door"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="130dp"/>

    <Button
        android:id="@+id/btn_sharatclass_to_in_sharatclass"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:background="@drawable/arrowfront"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@null"
        android:fontFamily="serif-monospace"
        android:visibility="invisible"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"
        />

    <Button
        android:id="@+id/btn_sharatclass_to_appcor"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/arrowleft"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@null"
        android:fontFamily="serif-monospace"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"
        />


</RelativeLayout>